# Spam-Classifier

./: .gitignore  .replit  README.md  pyproject.toml
classifier/: __main__.py  requirements.txt  spam.py
data/: spamham copy.csv  test2.csv  test_set.csv  training_set_small.csv
doc/: header.drawio
spam_filter/: spam.py
