[tool.poetry]
name = "Spam Classifier"
version = "1.0.0"
description = "A simple Python spam classifier"
authors = ["Kyle Lierer <liererkt@gmail.com>",]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kyle-L/Spam-Classifier"
homepage = "https://github.com/Kyle-L/Spam-Classifier"
documentation = "https://github.com/Kyle-L/Spam-Classifier"

[tool.poetry.dependencies]
pandas = "^1.3.4"
numpy = "^1.21.2"